# isotope

./: .gitignore  README.md  TASK-M1.md  pyproject.toml
.github/workflows/: ci.yml  publish-agent.yml  publish-core.yml  publish-isotopes.yml  publish.yml
docs/: PRD.md
docs/specs/: 2026-03-25-m2-sessions-rich-output-design.md  2026-03-25-m3-compaction-web-tools-design.md  2026-03-26-m0-core-migration-design.md  2026-03-26-m1-lift-modularize-design.md  2026-03-26-m2-sessions-robustness-design.md  2026-03-26-m3-compaction-web-tools-design.md  2026-03-26-m4-rpc-skills-mcp-design.md  2026-03-26-tui-coverage-design.md  2026-03-27-m2-setup-command-design.md  2026-03-27-multi-provider-setup-design.md
src/isotope_agents/: __init__.py  agent.py  cli.py  compaction.py  config.py  presets.py  session.py
src/isotope_agents/tools/: __init__.py  bash.py  edit.py  glob.py  grep.py  read.py  write.py
src/isotope_agents/tui/: __init__.py  app.py  commands.py  input.py  output.py
tests/: test_agent.py  test_cli.py  test_compaction.py  test_output.py  test_presets.py  test_session.py  test_session_integration.py  test_tools.py
