[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isotope-agents"
version = "0.2.0"
description = "A pluggable Python agent framework — configure it as a coding agent, personal assistant, or anything in between"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "GhostComplex" }]
keywords = ["ai", "agent", "llm", "tool-use", "framework", "coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "isotope-core>=0.1.0",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
tui = [
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]
search = ["httpx>=0.27"]
all = ["isotope-agents[tui,search]"]

[project.scripts]
isotope = "isotope_agents.cli:main"

[project.urls]
Homepage = "https://github.com/GhostComplex/isotope"
Repository = "https://github.com/GhostComplex/isotope"
Issues = "https://github.com/GhostComplex/isotope/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/isotope_agents"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
